[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "asphalt-mongodb"
description = "MongoDB integration component for the Asphalt framework"
readme = "README.rst"
authors = [{name = "Alex Grönholm", email = "alex.gronholm@nextday.fi"}]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Framework :: AsyncIO",
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "asphalt ~= 4.8",
    "motor ~= 3.3"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/asphalt-framework/asphalt-mongodb"

[project.optional-dependencies]
test = [
    "anyio >= 4.2",
    "coverage >= 7",
    "pytest >= 7",
]
doc = [
    "Sphinx >= 7.0",
    "sphinx-rtd-theme >= 1.3.0",
    "sphinx-autodoc-typehints >= 1.22",
]

[project.entry-points."asphalt.components"]
mongodb = "asphalt.mongodb:MongoDBComponent"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.ruff.lint]
extend-select = [
    "ASYNC",        # flake8-async
    "W",            # pycodestyle warnings
    "G",            # flake8-logging-format
    "I",            # isort
    "ISC",          # flake8-implicit-str-concat
    "PGH",          # pygrep-hooks
    "RUF100",       # unused noqa (yesqa)
    "UP",           # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["asphalt.mongodb"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = ["src"]

[tool.coverage.run]
source = ["asphalt.mongodb"]
relative_files = true
branch = true

[tool.coverage.report]
show_missing = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312, pypy3
skip_missing_interpreters = true
minversion = 4.0

[testenv]
extras = test
commands = python -m pytest {posargs}
package = editable

[testenv:docs]
extras = doc
commands = sphinx-build -n docs build/sphinx {posargs}
"""
